new files added

--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -381,9 +381,9 @@
 
  
   
-      <a href="/admin/departments" class="menu-item">
+      <a href="/admin/book_library" class="menu-item">
         <i class="fas fa-tasks"></i>
-        <span class="menu-item-text">Departments</span>
+        <span class="menu-item-text">Books Library</span>
       </a>
       
     
