--- a/views/user/class11.ejs
+++ b/views/user/class11.ejs
@@ -250,36 +250,76 @@
     <!-- Marathi -->
     <div class="book-card">
       <img src="https://m.media-amazon.com/images/I/81H6VlGPmhL.jpg" alt="Marathi Book">
-      <h3 style="color: #03403f;">मराठी</h3>
+      <h3 style="color: #03403f;">मराठी (Marathi)</h3>
+       👉
       <a href="https://kpgcollegeigatpuri.ac.in/wp-content/uploads/2020/11/XI-Marathi-textbook.pdf" target="_blank">📖 Open Book</a>
+       <br><br>
+  <table border="1" style="width: 100%; text-align: center;">
+        <tr><th colspan="2" style="color: #03403f;">📅 Marathi Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Mon-Wed: 6:30 PM</td></tr>
+      </table>
+      <br>
     </div>
 
     <!-- Hindi -->
     <div class="book-card">
       <img src="https://www.bookshare.org/cover/rY/rYu-rP0xSgi9S4zHx9ZSXRiY6gzOFkmry83ZFpTyZYY-MEDIUM.jpg" alt="Hindi Book">
       <h3 style="color: #03403f;">हिंदी</h3>
+       👉
       <a href="https://mpscmaterial.com/wp-content/uploads/2020/12/11th-Hindi-Maharashtra-Board.pdf" target="_blank">📖 Open Book</a>
+       <br><br>
+  <table border="1" style="width: 100%; text-align: center;">
+        <tr><th colspan="2" style="color: #03403f;">📅 Marathi Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Mon-Wed: 6:30 PM</td></tr>
+      </table>
+      <br>
     </div>
 
     <!-- English -->
     <div class="book-card">
       <img src="https://online.fliphtml5.com/xaxij/nhie/files/large/1.webp?1592301027&1592301027" alt="English Book">
       <h3 style="color: #03403f;">इंग्रजी</h3>
+       👉
       <a href="https://books.ebalbharati.in/pdfs/1103040026.pdf" target="_blank">📖 Open Book</a>
+       <br><br>
+  <table border="1" style="width: 100%; text-align: center;">
+        <tr><th colspan="2" style="color: #03403f;">📅 Marathi Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Mon-Wed: 6:30 PM</td></tr>
+      </table>
+      <br>
     </div>
 
     <!-- Economics -->
     <div class="book-card">
       <img src="https://bookstation.in/cdn/shop/products/21650_front.jpg?v=1681554048" alt="Economics Book">
       <h3 style="color: #03403f;">अर्थशास्त्र</h3>
+       👉
       <a href="https://mpscmaterial.com/wp-content/uploads/2020/12/11th-Economics-Marathi-PDF.pdf" target="_blank">📖 Open Book</a>
+       <br><br>
+  <table border="1" style="width: 100%; text-align: center;">
+        <tr><th colspan="2" style="color: #03403f;">📅 Marathi Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Mon-Wed: 6:30 PM</td></tr>
+      </table>
+      <br>
     </div>
 
     <!-- Mathematics & Statistics -->
     <div class="book-card">
       <img src="https://m.media-amazon.com/images/I/815udmy+75L.jpg" alt="Math Book">
       <h3 style="color: #03403f;">गणित व संख्याशास्त्र</h3>
+       👉
       <a href="https://ebooks.ebalbharati.in/pdfs/1103020424.pdf" target="_blank">📖 Open Book</a>
+       <br><br>
+  <table border="1" style="width: 100%; text-align: center;">
+        <tr><th colspan="2" style="color: #03403f;">📅 Marathi Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Mon-Wed: 6:30 PM</td></tr>
+      </table>
+      <br>
     </div>
 
   </div>
@@ -303,31 +343,75 @@
 <div class="book-card">
   <img src="https://m.media-amazon.com/images/I/81vKiqy6A0L._UF1000,1000_QL80_.jpg" alt="Physics Book">
   <h3 style="color: #03403f;">भौतिकशास्त्र (Physics)</h3>
+   👉
   <a href="https://ebooks.ebalbharati.in/pdfs/1103020017.pdf" target="_blank">📖 Open Book</a>
+   <br><br>
+  <table border="1" style="width: 100%; text-align: center;">
+        <tr><th colspan="2" style="color: #03403f;">📅 Marathi Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Mon-Wed: 6:30 PM</td></tr>
+      </table>
+      <br>
 </div>
+
 
 <div class="book-card">
   <img src="https://m.media-amazon.com/images/I/81WdHPobc9L._UF1000,1000_QL80_.jpg" alt="Chemistry Book">
   <h3 style="color: #03403f;">रसायनशास्त्र (Chemistry)</h3>
+   👉
   <a href="https://ebooks.ebalbharati.in/pdfs/1103020024.pdf" target="_blank">📖 Open Book</a>
+   <br><br>
+  <table border="1" style="width: 100%; text-align: center;">
+        <tr><th colspan="2" style="color: #03403f;">📅 Marathi Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Mon-Wed: 6:30 PM</td></tr>
+      </table>
+      <br>
 </div>
+
 
 <div class="book-card">
   <img src="https://m.media-amazon.com/images/I/81y4xvjqO8L.jpg" alt="Biology Book">
   <h3 style="color: #03403f;">जीवशास्त्र (Biology)</h3>
+   👉
   <a href="https://ebooks.ebalbharati.in/pdfs/1103020031.pdf" target="_blank">📖 Open Book</a>
+   <br><br>
+  <table border="1" style="width: 100%; text-align: center;">
+        <tr><th colspan="2" style="color: #03403f;">📅 Marathi Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Mon-Wed: 6:30 PM</td></tr>
+      </table>
+      <br>
 </div>
+
 
 <div class="book-card">
   <img src="https://m.media-amazon.com/images/I/815udmy+75L.jpg" alt="Math Book">
   <h3 style="color: #03403f;">गणित (Mathematics)</h3>
+   👉
   <a href="https://ebooks.ebalbharati.in/pdfs/1103020424.pdf" target="_blank">📖 Open Book</a>
+   <br><br>
+  <table border="1" style="width: 100%; text-align: center;">
+        <tr><th colspan="2" style="color: #03403f;">📅 Marathi Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Mon-Wed: 6:30 PM</td></tr>
+      </table>
+      <br>
 </div>
+
 
 <div class="book-card">
   <img src="https://online.fliphtml5.com/xaxij/nhie/files/large/1.webp?1592301027&1592301027" alt="English Book">
   <h3 style="color: #03403f;">इंग्रजी (English)</h3>
+   👉
   <a href="https://books.ebalbharati.in/pdfs/1103040026.pdf" target="_blank">📖 Open Book</a>
+   <br><br>
+  <table border="1" style="width: 100%; text-align: center;">
+        <tr><th colspan="2" style="color: #03403f;">📅 Marathi Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Mon-Wed: 6:30 PM</td></tr>
+      </table>
+      <br>
 </div>
 
 
