--- a/views/user/class12.ejs
+++ b/views/user/class12.ejs
@@ -260,9 +260,9 @@
       👉 <a href="" target="_blank">📖 Open Book</a>
       <br><br>
       <table border="1" style="width: 100%; text-align: center;">
-        <tr><th colspan="2">📅 Marathi Lectures</th></tr>
-        <tr><td>Offline</td><td>Mon-Wed-Fri: 9:00 AM</td></tr>
-        <tr><td>Online</td><td>Tue-Thu: 5:00 PM</td></tr>
+        <tr><th colspan="2" style="color: #03403f;">📅 Marathi Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Mon-Wed-Fri: 9:00 AM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Tue-Thu: 5:00 PM</td></tr>
       </table>
       <br>
     </div>
@@ -274,9 +274,9 @@
       👉 <a href="" target="_blank">📖 Open Book</a>
       <br><br>
       <table border="1" style="width: 100%; text-align: center;">
-        <tr><th colspan="2">📅 Math Lectures</th></tr>
-        <tr><td>Offline</td><td>Mon-Wed: 11:00 AM</td></tr>
-        <tr><td>Online</td><td>Thu-Sat: 4:30 PM</td></tr>
+        <tr><th colspan="2" style="color: #03403f;">📅 Math Lectures</th></tr>
+        <tr><td style="color: red;">Offline</td><td>Mon-Wed: 11:00 AM</td></tr>
+        <tr><td style="color: green;">Online</td><td>Thu-Sat: 4:30 PM</td></tr>
       </table>
       <br>
         </div>
@@ -288,9 +288,9 @@
       👉 <a href="https://books.ebalbharati.in/pdfs/1203040026.pdf" target="_blank">📖 Open Book</a>
       <br><br>
       <table border="1" style="width: 100%; text-align: center;">
-        <tr><th colspan="2">📅 English Lectures</th></tr>
-        <tr><td>Offline</td><td>Tue-Thu: 10:30 AM</td></tr>
-        <tr><td>Online</td><td>Fri-Sun: 6:00 PM</td></tr>
+        <tr><th colspan="2" style="color: #03403f;">📅 English Lectures</th></tr>
+        <tr><td style="color: red;">Offline</td><td>Tue-Thu: 10:30 AM</td></tr>
+        <tr><td style="color: green;">Online</td><td>Fri-Sun: 6:00 PM</td></tr>
       </table>
       <br>
     </div>
@@ -298,13 +298,13 @@
     <!-- Economics -->
     <div class="book-card">
       <img src="https://m.media-amazon.com/images/I/61y3VD3QrKL.jpg" alt="Economics Book">
-      <h3 style="color: #03403f;">अर्थशास्त्र(Economics)</h3>
+      <h3 style="color: #03403f;" >अर्थशास्त्र(Economics)</h3>
       👉 <a href="" target="_blank">📖 Open Book</a>
       <br><br>
       <table border="1" style="width: 100%; text-align: center;">
-        <tr><th colspan="2">📅 Economics Lectures</th></tr>
-        <tr><td>Offline</td><td>Mon-Fri: 12:00 PM</td></tr>
-        <tr><td>Online</td><td>Wed-Sat: 5:30 PM</td></tr>
+        <tr><th colspan="2" style="color: #03403f;">📅 Economics Lectures</th></tr>
+        <tr><td style="color: red;">Offline</td><td>Mon-Fri: 12:00 PM</td></tr>
+        <tr><td style="color: green;">Online</td><td>Wed-Sat: 5:30 PM</td></tr>
       </table>
       <br>
     </div>
@@ -316,9 +316,9 @@
       👉 <a href="" target="_blank">📖 Open Book</a>
       <br><br>
       <table border="1" style="width: 100%; text-align: center;">
-        <tr><th colspan="2">📅 Math & Stats Lectures</th></tr>
-        <tr><td>Offline</td><td>Tue-Thu: 1:30 PM</td></tr>
-        <tr><td>Online</td><td>Mon-Wed: 6:30 PM</td></tr>
+        <tr><th colspan="2" style="color: #03403f;">📅 Math & Stats Lectures</th></tr>
+        <tr><td style="color: red;">Offline</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online</td><td>Mon-Wed: 6:30 PM</td></tr>
       </table>
       <br>
   </div>
@@ -350,6 +350,13 @@
   <h3 style="color: #03403f;">मराठी(Marathi)</h3>
                     👉
   <a href="" target="_blank">📖 Open Book</a>
+  <br><br>
+  <table border="1" style="width: 100%; text-align: center;">
+        <tr><th colspan="2" style="color: #03403f;">📅 Marathi Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Mon-Wed: 6:30 PM</td></tr>
+      </table>
+      <br>
 </div>
 
 <div class="book-card">
@@ -357,6 +364,13 @@
   <h3 style="color: #03403f;">रसायनशास्त्र (Chemistry)</h3>
                     👉
   <a href="" target="_blank">📖 Open Book</a>
+   <br><br>
+  <table border="1" style="width: 100%; text-align: center;">
+        <tr><th colspan="2" style="color: #03403f;">📅 Chemistry Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Mon-Wed: 6:30 PM</td></tr>
+      </table>
+      <br>
 </div>
 
 <div class="book-card">
@@ -364,6 +378,13 @@
   <h3 style="color: #03403f;">जीवशास्त्र (Biology)</h3>
                     👉
   <a href="" target="_blank">📖 Open Book</a>
+   <br><br>
+  <table border="1" style="width: 100%; text-align: center;">
+        <tr><th colspan="2" style="color: #03403f;">📅 Biology Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Mon-Wed: 6:30 PM</td></tr>
+      </table>
+      <br>
 </div>
 
 <div class="book-card">
@@ -371,6 +392,13 @@
   <h3 style="color: #03403f;">गणित (Mathematics)</h3>
                     👉
   <a href="" target="_blank">📖 Open Book</a>
+   <br><br>
+  <table border="1" style="width: 100%; text-align: center;">
+        <tr><th colspan="2" style="color: #03403f;">📅 Math & Stats Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Mon-Wed: 6:30 PM</td></tr>
+      </table>
+      <br>
 </div>
 
 <div class="book-card">
@@ -378,6 +406,13 @@
   <h3 style="color: #03403f;">इंग्रजी (English)</h3>
                     👉
   <a href="https://books.ebalbharati.in/pdfs/1203040026.pdf" target="_blank">📖 Open Book</a>
+   <br><br>
+  <table border="1" style="width: 100%; text-align: center;">
+        <tr><th colspan="2" style="color: #03403f;">📅 English & Stats Lectures</th></tr>
+        <tr><td style="color: red;">Offline :-</td><td>Tue-Thu: 1:30 PM</td></tr>
+        <tr><td style="color: green;">Online :-</td><td>Mon-Wed: 6:30 PM</td></tr>
+      </table>
+      <br>
 </div>
 <br>
 <br>
