--- a/public/css/class5.css
+++ b/public/css/class5.css
@@ -201,6 +201,7 @@ body {
     .course-card {
       background: white;
       padding: 20px;
+      float: left;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       text-align: center;
