--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -74,6 +74,7 @@
       background: var(--bg-primary);
       color: var(--light);
       padding: 4rem 2rem 1rem;
+      margin-top: 50px;
     }
 
     .footer-section h4 {
