--- a/views/admin/book_library.ejs
+++ b/views/admin/book_library.ejs
@@ -70,10 +70,10 @@
     
     <thead style="background-color: #2E3A59; color: white; border-bottom: 3px solid #1c2537;">
       <tr>
-        <th style=":  solid #fff;">Sr.No</th>
-        <th style=":  solid #fff;">Book Title</th>
-        <th style=":  solid #fff;">Book Name</th>
-        <th style=":  solid #fff;">Book Image</th>
+        <th style="border-right: 2px solid #fff;">Sr.No</th>
+        <th style="border-right: 2px solid #fff;">Book Title</th>
+        <th style="border-right: 2px solid #fff;">Book Name</th>
+        <th style="border-right: 2px solid #fff;">Book Image</th>
         <th>Book PDF</th>
       </tr>
     </thead>
