--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -441,6 +441,11 @@
         <i class="fa-solid fa-comments-dollar"></i>
         <span class="menu-item-text">About Our Education</span>
       </a>
+
+       <a href="/admin/offer" class="menu-item">
+        <i class="fa-solid fa-comments-dollar"></i>
+        <span class="menu-item-text">New Offer</span>
+      </a>
     
     </div>
   </div>
