--- a/views/admin/view_students.ejs
+++ b/views/admin/view_students.ejs
@@ -54,7 +54,7 @@
                 <td><%= col.std_class_id%><sup>th</sup></td>
                 <td><%= col.std_sc_name%></td>
                 <td>
-                  <a href="">
+                  <a href="/admin/view_student/<%-col.std_id%>">
                     <button class="btn btn-primary"><i class="fa-solid fa-eye"></i></button>
                   </a>
                   <a href="/admin/delete_student/<%-col.std_id%>">
