--- a/views/admin/add_student.ejs
+++ b/views/admin/add_student.ejs
@@ -46,7 +46,7 @@
       position: relative;
     }
     .form-group label {
-      font-weight: 600;
+      font-weight: 500;
       margin-bottom: 0.4rem;
       display: flex; align-items: center;
     }
@@ -219,14 +219,14 @@
             <label for="standard"><i class="fas fa-graduation-cap"></i> Class *</label>
             <select id="standard" name="std_class" required >
               <option value="">Select</option>
-              <option value="5th">5th</option>
-              <option value="6th">6th</option>
-              <option value="7th">7th</option>
-              <option value="8th">8th</option>
-              <option value="9th">9th</option>
-              <option value="10th">10th</option>
-              <option value="11th">11th</option>
-              <option value="12th">12th</option>
+              <option value="5">5th</option>
+              <option value="6">6th</option>
+              <option value="7">7th</option>
+              <option value="8">8th</option>
+              <option value="9">9th</option>
+              <option value="10">10th</option>
+              <option value="11">11th</option>
+              <option value="12">12th</option>
             </select>
           </div>
           <div class="form-group">
