--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -460,7 +460,7 @@
         <span class="menu-item-text">About Our Education</span>
       </a>
 
-       <a href="/admin/offer" class="menu-item">
+       <a href="/admin/offers" class="menu-item">
         <i class="fa-solid fa-comments-dollar"></i>
         <span class="menu-item-text">New Offer</span>
       </a>
